Many additions and fixes. Features the new zipping option.